- fixed privacy modal issue - fixed text change for upload area on mobile

--- a/assets/app.css
+++ b/assets/app.css
@@ -597,20 +597,19 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
 .mt-5 {
   margin-top: 1.25rem;
+}
+.mt-10 {
+  margin-top: 2.5rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
@@ -632,18 +631,6 @@ video {
 }
 .mt-3\.5 {
   margin-top: 0.875rem;
-}
-.mb-16 {
-  margin-bottom: 4rem;
-}
-.mb-12 {
-  margin-bottom: 3rem;
-}
-.mb-14 {
-  margin-bottom: 3.5rem;
-}
-.mt-10 {
-  margin-top: 2.5rem;
 }
 .block {
   display: block;
@@ -756,6 +743,9 @@ video {
 .max-w-\[600px\] {
   max-width: 600px;
 }
+.max-w-3xl {
+  max-width: 48rem;
+}
 .grow {
   flex-grow: 1;
 }
@@ -826,6 +816,11 @@ video {
 .gap-y-4 {
   row-gap: 1rem;
 }
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -861,6 +856,9 @@ video {
 .border-b {
   border-bottom-width: 1px;
 }
+.border-b-2 {
+  border-bottom-width: 2px;
+}
 .border-none {
   border-style: none;
 }
@@ -894,6 +892,10 @@ video {
 .border-brand-red {
   --tw-border-opacity: 1;
   border-color: rgb(213 0 58 / var(--tw-border-opacity));
+}
+.border-b-black {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .bg-green-50\/60 {
   background-color: rgb(240 253 244 / 0.6);
@@ -948,8 +950,8 @@ video {
 .p-2 {
   padding: 0.5rem;
 }
-.p-10 {
-  padding: 2.5rem;
+.p-6 {
+  padding: 1.5rem;
 }
 .p-7 {
   padding: 1.75rem;
@@ -963,8 +965,8 @@ video {
 .p-5 {
   padding: 1.25rem;
 }
-.p-6 {
-  padding: 1.5rem;
+.p-10 {
+  padding: 2.5rem;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -973,6 +975,10 @@ video {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -1022,10 +1028,6 @@ video {
   padding-left: 0.625rem;
   padding-right: 0.625rem;
 }
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1036,9 +1038,6 @@ video {
 }
 .text-center {
   text-align: center;
-}
-.text-right {
-  text-align: right;
 }
 .font-tweet {
   font-family: Helvetica Neue,sans-serif;
@@ -1114,9 +1113,15 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-black\/50 {
+  color: rgb(0 0 0 / 0.5);
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+.opacity-0 {
+  opacity: 0;
 }
 .shadow-cust {
   --tw-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -1543,10 +1548,6 @@ input[type="number"] {
   content: var(--tw-content);
 }
 
-.hover\:cursor-pointer:hover {
-  cursor: pointer;
-}
-
 .hover\:bg-stone-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 244 / var(--tw-bg-opacity));
@@ -1682,21 +1683,8 @@ input[type="number"] {
 
 @media (min-width: 640px) {
 
-  .sm\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .sm\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
-  .sm\:p-6 {
-    padding: 1.5rem;
-  }
-
-  .sm\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+  .sm\:mb-14 {
+    margin-bottom: 3.5rem;
   }
 
   .sm\:text-base {
@@ -1718,24 +1706,20 @@ input[type="number"] {
     margin-bottom: 1rem;
   }
 
-  .md\:mt-4 {
-    margin-top: 1rem;
-  }
-
-  .md\:mb-14 {
-    margin-bottom: 3.5rem;
-  }
-
   .md\:mt-0 {
     margin-top: 0px;
   }
 
-  .md\:p-9 {
-    padding: 2.25rem;
+  .md\:mt-4 {
+    margin-top: 1rem;
   }
 
   .md\:p-0 {
     padding: 0px;
+  }
+
+  .md\:p-9 {
+    padding: 2.25rem;
   }
 
   .md\:text-base {
@@ -1755,21 +1739,8 @@ input[type="number"] {
     margin-top: 1.25rem;
   }
 
-  .lg\:p-9 {
-    padding: 2.25rem;
-  }
-
-  .lg\:p-8 {
-    padding: 2rem;
-  }
-
   .lg\:p-10 {
     padding: 2.5rem;
-  }
-
-  .lg\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .after\:lg\:text-base::after {
@@ -1790,17 +1761,8 @@ input[type="number"] {
     margin-top: 1.5rem;
   }
 
-  .xl\:p-10 {
-    padding: 2.5rem;
-  }
-
   .xl\:p-11 {
     padding: 2.75rem;
-  }
-
-  .xl\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .xl\:text-lg {
